agregando category - brand -test unitarios e integracion